Added camera icon

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <section class="search-container">
                 <div><img src="./assets/search.svg" alt=""></div>
                 <input type="search" autocomplete="off" name="q">
-                <div><img src="./assets/mic.svg" alt=""></div>
-                <!-- <div><img src="./assets/camera.svg" alt="" style="background-color: red;"></div> -->
+                <div class="mic"><img src="./assets/mic.svg" alt=""></div>
+                <div class="camera"><img src="./assets/camera.svg" alt=""></div>
             </section>
             <section>
                 <button type="submit">Google Search</button>
